Second_Step/data/43/164/grade_comments.txt
-The compilation or preparation of execution has failed
IntegerProfile.java:39: error: cannot find symbol
            if(conter1>counter2){
               ^
  symbol:   variable conter1
  location: class IntegerProfile
1 error
Not compiled
